--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,11 +12,37 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.10.2/css/jquery.dataTables.min.css"
+    />
+    <script
+      type="text/javascript"
+      src="https://cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
+    ></script> -->
 
     <title>Coding Test - Mediusware Ltd.</title>
   </head>
   <body>
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.10.2/css/jquery.dataTables.min.css"
+    />
+    <script
+      type="text/javascript"
+      src="https://cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"
+    ></script> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <!-- <script>
+    $(document).ready(function () {
+      $("#dtBasicExample").DataTable();
+      $(".dataTables_length").addClass("bs-select");
+    });
+  </script> -->
 </html>
