--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
     ></script> -->
 
-    <title>Demo CRUD</title>
+    <title>Coding Test - Mediusware Ltd.</title>
   </head>
   <body>
     <!-- <link
